force-app/main/default/objects/Chapter__c/Chapter__c.object-meta.xml
<CustomObject>
    <label>Chapter/Blood Region</label>
    <nameField>
        <label>Chapter/Blood Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapter/Blood Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>