force-app/main/default/objects/Chapter__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <description>Picklist with the division codes as of the Oct 2019 geographic realignment</description>
    <label>Donor Services Division Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BD31</fullName>
            </value>
            <value>
                <fullName>BD32</fullName>
            </value>
            <value>
                <fullName>BD33</fullName>
            </value>
            <value>
                <fullName>BD34</fullName>
            </value>
            <value>
                <fullName>BD35</fullName>
            </value>
            <value>
                <fullName>BD36</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>NCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>