force-app/main/default/objects/Chapter__c/fields/HS_Division__c.field-meta.xml
<CustomField>
    <fullName>HS_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Humanitarian Services Division</description>
    <label>HS Division</label>
    <referenceTo>HS_Division__c</referenceTo>
    <relationshipLabel>Chapter/Blood Regions</relationshipLabel>
    <relationshipName>Chapter_Blood_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>