force-app/main/default/objects/Chapter__c/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <description>The old record id from the P&amp;I instance (used only for data load of chapters)</description>
    <externalId>true</externalId>
    <label>OldId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>