force-app/main/default/objects/Chapter__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <label>Region Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>