force-app/main/default/objects/Chapter__c/fields/Regional_Chapter_Code__c.field-meta.xml
<CustomField>
    <fullName>Regional_Chapter_Code__c</fullName>
    <label>Regional Chapter Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>