force-app/main/default/objects/Chapter__c/validationRules/Chapter_Name_Maxlength_to_57_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Chapter_Name_Maxlength_to_57_Characters</fullName>
    <active>true</active>
    <description>Limit the chapter name to 57 characters.</description>
    <errorConditionFormula>AND(
    OR( 
       ISNEW(),
       ISCHANGED(Name),
       ISCHANGED(Type__c) 
    ), 
   ISPICKVAL(Type__c,&#39;Chapter&#39;),
   NOT(ISBLANK(Name)),
   LEN(Name) &gt; 57
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Chapter name must be within 57 characters.</errorMessage>
</ValidationRule>