force-app/main/default/objects/Chapter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chapter_Code__c</columns>
    <columns>Donor_Services_Region_ID__c</columns>
    <columns>Donor_Services_Division__c</columns>
    <columns>Division_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Zipcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>